[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_modeling_in_python"
version = "0.0.1"
description = "Complete Credit Risk Models  in Python PD, LGD, and EAD) including creating a scorecard from scratch."
authors = [
  { name = "Swastik De" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["credit_risk_modeling_in_python"]
include = ["pyproject.toml", "credit_risk_modeling_in_python/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_risk_modeling_in_python"]
force-sort-within-sections = true

